--- a/app.css
+++ b/app.css
@@ -151,3 +151,17 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+
+.panel {
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px 25px;
+    /* 15px top/bottom, 25px left/right */
+    width: 100%;
+    max-width: 960px;
+    /* This means that the element will never be wider than 960 pixels, even if the parent element is wider. */
+}
+
+img {
+    width: 113px;
+}
